--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "node server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "repository": {
     "type": "git",
@@ -19,7 +19,12 @@
   },
   "homepage": "https://github.com/Helzephyr23/local-drive#readme",
   "dependencies": {
+    "dotenv": "^17.2.2",
     "express": "^4.21.2",
-    "nodemon": "^3.1.10"
+    "mongoose": "^8.18.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10",
+    "prettier": "^3.6.2"
   }
 }
